--- a/TombstoneHelper.Demo/pages/Some.xaml
+++ b/TombstoneHelper.Demo/pages/Some.xaml
@@ -1,5 +1,5 @@
 ﻿<phone:PhoneApplicationPage 
-    x:Class="TombstoneHelper.Demo.pages.TextBoxes"
+    x:Class="TombstoneHelper.Demo.pages.Some"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:phone="clr-namespace:Microsoft.Phone.Controls;assembly=Microsoft.Phone"
@@ -21,18 +21,11 @@
 
         <StackPanel x:Name="TitlePanel" Grid.Row="0" Margin="12,17,0,28">
             <TextBlock x:Name="ApplicationTitle" Text="TOMBSTONE HELPER DEMO" Style="{StaticResource PhoneTextNormalStyle}"/>
-            <TextBlock x:Name="PageTitle" Text="text boxes" Margin="9,-7,0,0" Style="{StaticResource PhoneTextTitle1Style}"/>
+            <TextBlock x:Name="PageTitle" Text="page name" Margin="9,-7,0,0" Style="{StaticResource PhoneTextTitle1Style}"/>
         </StackPanel>
 
         <Grid x:Name="ContentPanel" Grid.Row="1" Margin="12,0,12,0">
-            <StackPanel>
-                <TextBlock Text="first (has name)" />
-                <TextBox Name="first" />
-                <TextBlock Text="second (doesn't have name)" />
-                <TextBox  />
-                <TextBlock Text="third (has name)" />
-                <TextBox Name="third" />
-            </StackPanel>
+            
         </Grid>
     </Grid>
 
