--- a/TombstoneHelper.Demo/pages/AutoTombstone.xaml
+++ b/TombstoneHelper.Demo/pages/AutoTombstone.xaml
@@ -1,12 +1,11 @@
-﻿<phone:PhoneApplicationPage 
-    x:Class="TombstoneHelper.Demo.pages.TextBoxes"
+﻿<TombstoneHelper:AutoTombstonePage
+    x:Class="TombstoneHelper.Demo.pages.AutoTombstone"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:phone="clr-namespace:Microsoft.Phone.Controls;assembly=Microsoft.Phone"
     xmlns:shell="clr-namespace:Microsoft.Phone.Shell;assembly=Microsoft.Phone"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-    xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-    FontFamily="{StaticResource PhoneFontFamilyNormal}"
+    xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" xmlns:TombstoneHelper="clr-namespace:TombstoneHelper;assembly=TombstoneHelper" FontFamily="{StaticResource PhoneFontFamilyNormal}"
     FontSize="{StaticResource PhoneFontSizeNormal}"
     Foreground="{StaticResource PhoneForegroundBrush}"
     SupportedOrientations="Portrait" Orientation="Portrait"
@@ -21,19 +20,10 @@
 
         <StackPanel x:Name="TitlePanel" Grid.Row="0" Margin="12,17,0,28">
             <TextBlock x:Name="ApplicationTitle" Text="TOMBSTONE HELPER DEMO" Style="{StaticResource PhoneTextNormalStyle}"/>
-            <TextBlock x:Name="PageTitle" Text="text boxes" Margin="9,-7,0,0" Style="{StaticResource PhoneTextTitle1Style}"/>
+            <TextBlock x:Name="PageTitle" Text="page name" Margin="9,-7,0,0" Style="{StaticResource PhoneTextTitle1Style}"/>
         </StackPanel>
 
-        <Grid x:Name="ContentPanel" Grid.Row="1" Margin="12,0,12,0">
-            <StackPanel>
-                <TextBlock Text="first (has name)" />
-                <TextBox Name="first" />
-                <TextBlock Text="second (doesn't have name)" />
-                <TextBox  />
-                <TextBlock Text="third (has name)" />
-                <TextBox Name="third" />
-            </StackPanel>
-        </Grid>
+        <Grid x:Name="ContentPanel" Grid.Row="1" Margin="12,0,12,0"></Grid>
     </Grid>
 
-</phone:PhoneApplicationPage>
+</TombstoneHelper:AutoTombstonePage>
