--- a/TombstoneHelper.Demo/pages/AutoTombstone.xaml
+++ b/TombstoneHelper.Demo/pages/AutoTombstone.xaml
@@ -20,10 +20,17 @@
 
         <StackPanel x:Name="TitlePanel" Grid.Row="0" Margin="12,17,0,28">
             <TextBlock x:Name="ApplicationTitle" Text="TOMBSTONE HELPER DEMO" Style="{StaticResource PhoneTextNormalStyle}"/>
-            <TextBlock x:Name="PageTitle" Text="page name" Margin="9,-7,0,0" Style="{StaticResource PhoneTextTitle1Style}"/>
+            <TextBlock x:Name="PageTitle" Text="auto" Margin="9,-7,0,0" Style="{StaticResource PhoneTextTitle1Style}"/>
         </StackPanel>
 
-        <Grid x:Name="ContentPanel" Grid.Row="1" Margin="12,0,12,0"></Grid>
+        <Grid x:Name="ContentPanel" Grid.Row="1" Margin="12,0,12,0">
+            <StackPanel>
+                <TextBox Name="tb1" />
+                <CheckBox Name="cb1" />
+                <Slider Name="s1" />
+                <PasswordBox Name="pb1" />
+            </StackPanel>
+        </Grid>
     </Grid>
 
 </TombstoneHelper:AutoTombstonePage>
