--- a/TombstoneHelper.Demo/pages/Some.xaml
+++ b/TombstoneHelper.Demo/pages/Some.xaml
@@ -25,7 +25,14 @@
         </StackPanel>
 
         <Grid x:Name="ContentPanel" Grid.Row="1" Margin="12,0,12,0">
-            
+            <StackPanel>
+                <TextBlock Text="email" />
+                <TextBox Name="enteredEmail" InputScope="EmailUserName" />
+                <TextBlock Text="password" />
+                <PasswordBox Name="enteredPassword" />
+                <CheckBox Name="termsAccepted" Content="accept terms" />
+                <Button Content="login" Click="LoginClick" />
+            </StackPanel>
         </Grid>
     </Grid>
 
