enable scrollviewer to also support horizontal offsets

--- a/TombstoneHelper.Demo/MainPage.xaml
+++ b/TombstoneHelper.Demo/MainPage.xaml
@@ -35,6 +35,7 @@
                     <Button Content="check boxes" Click="CheckBoxes_Click" />
                     <Button Content="radio buttons" Click="RadioButtons_Click" />
                     <Button Content="scroll viewers" Click="ScrollViewers_Click" />
+                    <Button Content="horizontal scroll viewers" Click="HorizontalScrollViewers_Click" />
                     <Button Content="sliders" Click="Sliders_Click" />
                     <Button Content="toggle buttons" Click="ToggleButtons_Click" />
                     <Button Content="auto tombstone page" Click="AutoTombstonePage_Click" />
